--- a/WebAPIProject/bin/WebAPIProject.dll.config
+++ b/WebAPIProject/bin/WebAPIProject.dll.config
@@ -48,7 +48,10 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DataEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-C4LFMTK;initial catalog=Sample;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DataEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-C4LFMTK;initial catalog=Sample;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />-->
+    <add name="SampleContext" connectionString="Data Source=DESKTOP-C4LFMTK;Initial Catalog=Sample1;Integrated Security=True;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
