--- a/ClientApplication/ClientApplication.csproj
+++ b/ClientApplication/ClientApplication.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Migrations\201704301700434_Initial.Designer.cs">
       <DependentUpon>201704301700434_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705040245564_Init.cs" />
+    <Compile Include="Migrations\201705040245564_Init.Designer.cs">
+      <DependentUpon>201705040245564_Init.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Employee.cs" />
@@ -245,6 +249,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201704301700434_Initial.resx">
       <DependentUpon>201704301700434_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705040245564_Init.resx">
+      <DependentUpon>201705040245564_Init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
